<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tes"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

       <TextView
           android:layout_marginTop="30sp"
           android:id="@+id/tv_greet"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/today_s_weather_at"
           android:textSize="16sp"
           android:textColor="@color/white"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:fontFamily="@font/ps_light" />
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tokyo"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_greet"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_city"
            android:id="@+id/view_temp"
            android:layout_marginBottom="15dp">


            <ImageView
                android:id="@+id/iv_weather"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_cloud"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/ps_light"
                android:gravity="center"
                android:text="@string/degree"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_weather"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_sky"
                android:id="@+id/tv_sts"
                app:layout_constraintTop_toBottomOf="@id/tv_degree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/ps_medium"
                android:textSize="25sp"
                android:textColor="@color/white"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_details"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/view_temp">

            <ImageView
                android:padding="@dimen/_10sp"
                android:id="@+id/iv_dtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_7days"
            app:layout_constraintTop_toBottomOf="@id/view_details"
            android:text="@string/next_7_days"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/ps_medium"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_rv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_7days" />







    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>